<resources>
    <string name="app_name">HOU Note</string>
    <string name="action_settings"></string>
    <string name="description"></string>
    <string name="default_email">webmaster@hou.edu.vn</string>
	<string name="compare_khong">Không</string>
    <string name="check_internet">Kiểm tra kết nối mạng</string>
    <string name="database_error">Hệ thống đang sửa chữa :(</string>
    <string name="title_activity_splash">HOU Note</string>
    <string name="splash_dialog_title">Hỗ trợ cài đặt</string>
    <string name="splash_dialog_message">Nhập địa chỉ Email</string>
    <string name="splash_dialog_success">Vui lòng kiểm tra email</string>
    <string name="splash_dialog_false">Email không có trong hệ thống</string>
    <string name="splash_dialog_ok">GỬI</string>
    <string name="splash_dialog_cancel">HỦY BỎ</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="login_failed">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="login_notnull">Hãy điền đầy đủ thông tin</string>
    <string name="login_tendangnhap">Tên đăng nhập</string>
    <string name="login_matkhau">Mật khẩu</string>
    <string name="login_quenmatkhau">Quên mật khẩu?</string>
    <string name="login_stcb">SỔ TAY CÁN BỘ</string>
    <string name="forgotpass_title">Quên mật khẩu</string>
    <string name="forgotpass_message">Xác nhận địa chỉ Email</string>
    <string name="forgotpass_ok">Đồng ý</string>
    <string name="forgotpass_cancel">Hủy bỏ</string>
    <string name="forgotpass_success">Mật khẩu mới được gửi tới email của bạn</string>
    <string name="forgotpass_false">Địa chỉ email không tồn tại</string>
    <string name="forgotpass_validate">Địa chỉ email không được bỏ trống</string>
    <string name="manager_sotay">Sổ tay</string>
    <string name="manager_ghichu">Tất cả ghi chú</string>
    <string name="manager_lich">Lịch</string>
    <string name="manager_lichtuan">Lịch tuần</string>
    <string name="manager_lienhe">Liên hệ</string>
    <string name="manager_dongbo">Đồng bộ</string>
    <string name="manager_caidat">Cài đặt</string>
    <string name="manager_thongtin">Thông tin</string>
    <string name="manager_thongtincanbo">Cá nhân</string>
    <string name="manager_dangxuat">Đăng xuất</string>
    <string name="title_activity_note"></string>
    <string name="ghi_chu_moi">Tiêu đề Ghi chú</string>
    <string name="soan_ghi_chu">Soạn ghi chú của bạn</string>
    <string name="menu_note_share">Chia sẻ</string>
    <string name="menu_note_create">Tạo mới</string>
    <string name="menu_note_modify">Chỉnh sửa nội dung</string>
    <string name="menu_note_chupanh">Chụp ảnh</string>
    <string name="menu_note_dinhkem">Đính kèm</string>
    <string name="menu_note_message">Gửi tin nhắn</string>
    <string name="oclock">Đặt thời gian</string>
    <string name="title_share">Chia sẻ qua</string>
    <string name="cant_insert">Không thể lưu ghi chú rỗng</string>
    <string name="note_no_sotay">Bạn cần chọn sổ tay trước khi lưu ghi chú</string>
    <string name="save_sucessful">Đã lưu ghi chú</string>
    <string name="note_sotay">CHỌN SỔ TAY</string>
    <string name="note_title_default_sotay">Sổ tay mới</string>
    <string name="note_note_select_file">Chưa tệp tin nào được chọn</string>
    <string name="note_back_confirm">Bạn có muốn lưu ghi chú ?</string>
    <string name="note_err_createnew">Xảy ra lỗi, vui lòng thử lại sau</string>
    <string name="dialog_note_dinhkem">Đính kèm</string>
    <string name="dialog_note_album">Hình ảnh</string>
    <string name="dialog_note_file">Tệp tin</string>
    <string name="dialog_note_voice">Ghi âm</string>
    <string name="no_internet">Kiểm tra kết nối mạng</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="calendar_add">Tạo mới</string>
    <string name="calendar_today">Hôm nay</string>
    <string name="calendar_delete_confirm">Bạn có chắc chắn muốn xóa sự kiện này ?</string>
    <string name="calendar_lunnar">Âm lịch:</string>
    <string name="menu_sotay_addnew">Tạo mới sổ tay</string>
    <string name="menu_sotay_search">Tìm kiếm</string>
    <string name="menu_sotay_sort">Sắp xếp</string>
    <string name="khong_ghi_chu">Không có ghi chú nào.\nChọn \"+\" để tạo ghi chú mới.</string>
    <string name="khong_so_tay">Không có sổ tay nào.\nChọn \"+\" để tạo sổ tay mới.</string>
    <string name="dialog_sotay_sort_titledialog">Sắp xếp Sổ tay theo</string>
    <string name="dialog_sotay_sort_title">Tiêu đề</string>
    <string name="dialog_sotay_sort_nonote">Số ghi chú</string>
    <string name="dialog_sotay_sort_time">Thời gian</string>
    <string name="Mon">Thứ hai</string>
    <string name="Tue">Thứ ba</string>
    <string name="Wed">Thứ tư</string>
    <string name="Thus">Thứ năm</string>
    <string name="Fri">Thứ sáu</string>
    <string name="Sat">Thứ bảy</string>
    <string name="Sun">Chủ nhật</string>
    <string name="dialogSukien">Chi tiết</string>
    <string name="btnDismiss">OK</string>
    <string name="dialogTitleNote">Ghi chú</string>
    <string name="dialogTitleContents">Nội dung</string>
    <string name="toastGetEvent">Sự kiện được thêm vào lịch</string>
    <string name="toastDropEvent">Sự kiện được gỡ khỏi lịch</string>
    <string name="lichtuan_sang">Sáng</string>
    <string name="lichtuan_chieu">Chiều</string>
    <string name="dialog_lichtuan_thoigian">Thời gian:</string>
    <string name="dialog_lichtuan_diadiem">Địa điểm:</string>
    <string name="dialog_lichtuan_thanhphan">Thành phần:</string>
    <string name="dialog_lichtuan_ghichu">Ghi chú:</string>
    <string name="dialog_lichtuan_noidung">Nội dung:</string>
    <string name="dialog_lichtuan_insert_success">Đã lưu sự kiện vào lịch cá nhân</string>
    <string name="dialog_lichtuan_insert_false">Vui lòng thử lại sau</string>
    <string name="menu_lichtuan_collapse">Thu gọn</string>
    <string name="dialog_sotay_addnew_title">Sổ tay mới</string>
    <string name="dialog_sotay_addnew_cancel">HỦY BỎ</string>
    <string name="dialog_sotay_addnew_ok">TẠO MỚI</string>
    <string name="dialog_sotay_addnew_hint">Nhập tên sổ tay</string>
    <string name="dialog_sotay_addnew_notif">Tên đã được sử dụng</string>
    <string name="listnote_deletemulti">Xóa ghi chú</string>
    <string name="listnote_ghichu">Ghi chú</string>
    <string name="remove_attach_confirm">Bạn có muốn xóa file đính kèm này không ?</string>
    <string name="sth_bookmark">Đánh dấu</string>
    <string name="sth_more">More</string>
    <string name="title_activity_list_note">ListNoteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete">Delete</string>
    <string name="file_style">File style</string>
    <string name="title_activity_danh_sach_can_bo">DanhSachCanBoActivity</string>
    <string name="title_activity_canbo">CanboActivity</string>
    <string name="canboActivity_title">Thông tin cán bộ</string>
    <string name="title_activity_doi_matkhau">Đổi mật khẩu</string>
    <string name="doimatkhau_isfirst">Bạn phải đổi mật khẩu ở lần đăng nhập đầu tiên</string>
    <string name="doimatkhau_validate">Bạn phải điền đầy đủ thông tin</string>
    <string name="doimatkhau_pass">Mật khẩu mới không được giống mật khẩu cũ</string>
    <string name="doimatkhau_passshort">Mật khẩu phải lớn hơn 8 ký tự</string>
    <string name="doimatkhau_success">Đổi mật khẩu thành công</string>
    <string name="doimatkhau_false">Tên đăng nhập hoặc mật khẩu không hợp lệ</string>
    <string name="doimatkhau_tendangnhap">Tên đăng nhập</string>
    <string name="doimatkhau_passcu">Mật khẩu cũ</string>
    <string name="doimatkhau_passmoi">Mật khẩu mới</string>
    <string name="lienhe_title_phong">Phòng</string>
    <string name="lienhe_title_khoa">Khoa</string>
    <string name="lienhe_title_trungtam">Trung tâm</string>
    <string name="lienhe_title_tochuc">Tổ chức</string>
    <string name="setting_account">CÀI ĐẶT TÀI KHOẢN</string>
    <string name="setting_acc_changepass">Đổi mật khẩu</string>
    <string name="setting_acc_savelogin">Đăng nhập tự động</string>
    <string name="setting_acc_logout">Đăng xuất</string>
    <string name="setting_application">CÀI ĐẶT ỨNG DỤNG</string>
    <string name="setting_app_getnotif">Nhận thông báo</string>
    <string name="setting_app_update">Cập nhật dữ liệu</string>
    <string name="setting_app_help">Trung tâm hỗ trợ</string>
    <string name="setting_app_update_success">Hoàn tất cập nhật</string>
    <string name="gcm_title">Lịch hoạt động HOU</string>
    <string name="gcm_message">Lịch tuần được cập nhật</string>
    <string name="gcm_notif_ticker">Viện Đại học Mở Hà Nội</string>
    <string name="title_activity_sukien">Thêm sự kiện</string>
    <string name="menu_event_save">Lưu sự kiện</string>
    <string name="createevent_title">Tiêu đề</string>
    <string name="createevent_address">Địa điểm</string>
    <string name="createevent_time">Thời gian</string>
    <string name="createevent_details">Mô tả</string>
    <string name="createevent_alarm">Báo thức</string>
    <string name="createevent_default_time">09:00</string>
    <string name="createevent_validate">Bạn cần điền tiêu đề sự kiện</string>
    <string name="createevent_success">Sự kiện được tạo mới</string>
    <string name="createevent_fail">Xảy ra lỗi, vui lòng thử lại</string>
    <string name="profile_validate">Bạn phải điền đầy đủ thông tin</string>
    <string name="profile_update_fail">Xảy ra lỗi, vui lòng thử lại</string>
    <string name="profile_update_success">Cập nhật thành công</string>
    <string name="profile_update_ava_success">Cập nhật ảnh đại diện thành công</string>
    <string name="imagedialog_capture">Chụp ảnh</string>
    <string name="imagedialog_album">Thư viện ảnh</string>
    <string name="title_activity_calendar_detail">Chi tiết sự kiện</string>
    <string name="action_delete_event">Xóa sự kiện</string>
    <string name="calendar_detail_ok">Đồng ý</string>
    <string name="calendar_detail_cancel">Hủy bỏ</string>
    <string name="calendar_detail_message">Bạn có muốn xóa sự kiện này ?</string>
    <string name="calendar_detail_del_ok">Sự kiện đã được xóa</string>
    <string name="calendar_detail_time">Thời gian</string>
    <string name="calendar_detail_add">Địa điểm</string>
    <string name="calendar_detail_detail">Mô tả</string>
    <string name="dialog_donvi_details">Danh sách cán bộ</string>
    <string name="dialog_donvi_call">Gọi điện</string>
    <string name="dialog_donvi_email">Gửi thư</string>
    <string name="title_activity_help">Trung tâm hỗ trợ</string>
    <string name="help_version">Phiên bản: 1.0.5</string>
    <string name="help_title_team">NHÓM PHÁT TRIỂN</string>
    <string name="help_email_team">Email: h2p.groups@gmail.com</string>
    <string name="help_phone_team">Liên hệ: 01646970797</string>
    <string name="help_subject_mail">Phản hồi Sổ tay điện tử HOU</string>
</resources>