<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hou.sotaycanbo.HelpActivity" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/help_version" />

    <RelativeLayout
        android:id="@+id/rlDevTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVersion"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tvTitleTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_title_team"
            android:textAllCaps="true"
            android:textColor="@color/blue_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmailTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleTeam"
            android:paddingTop="10dp"
            android:text="@string/help_email_team"
            android:textColor="@color/black" />
        
        <TextView
            android:id="@+id/tvPhoneTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmailTeam"
            android:paddingTop="10dp"
            android:text="@string/help_phone_team"
            android:textColor="@color/black" />
    </RelativeLayout>

</RelativeLayout>