<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="15dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/dialog_note_dinhkem"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvDialog_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_pressed_dialognote"
            android:drawableLeft="@drawable/dialog_note_album"
            android:drawablePadding="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_note_album"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvDialog_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_pressed_dialognote"
            android:drawableLeft="@drawable/dialog_note_file"
            android:drawablePadding="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_note_file"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvDialog_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_pressed_dialognote"
            android:drawableLeft="@drawable/dialog_note_voice"
            android:drawablePadding="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_note_voice"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>