<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edtTenSotay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/dialog_sotay_addnew_hint"
        android:inputType="text"
        android:textColor="@color/colorDarkPrimary" >
    </EditText>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edtTenSotay"
        android:layout_marginBottom="8dp"
        android:background="@color/line" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_below="@id/line"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/btnOK"
        android:background="@color/transparent"
        android:gravity="center"
        android:height="36dp"
        android:text="@string/dialog_sotay_addnew_cancel"
        android:textColor="@color/colorDarkPrimary" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/line"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:height="36dp"
        android:text="@string/dialog_sotay_addnew_ok"
        android:textColor="@color/colorDarkPrimary" />

</RelativeLayout>