<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hou.sotaycanbo.LoginActivity" >

    <LinearLayout
        android:id="@+id/llAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/logo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_stcb"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_below="@+id/llAppName"
        android:background="@drawable/layout_border"
        android:drawableLeft="@drawable/user_login"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/login_tendangnhap"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/layout_border"
        android:drawableLeft="@drawable/password_login"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/login_matkhau"
        android:inputType="textPassword"
        android:maxLength="100"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/edt_pass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button_bolder"
        android:gravity="center"
        android:text="@string/title_activity_login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_quenmatkhau"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:text="@string/login_quenmatkhau"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>