<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context="com.hou.sotaycanbo.DoiMatkhauActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/doimatkhau_tendangnhap"
        android:textColor="#000" />

    <EditText
        android:id="@+id/edtTaikhoan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/edittext_default_bg"
        android:inputType="text"
        android:padding="10dp"
        android:scrollbars=""
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/doimatkhau_passcu"
        android:textColor="#000" />

    <EditText
        android:id="@+id/edtPasscu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/edittext_default_bg"
        android:inputType="textPassword"
        android:padding="10dp"
        android:scrollbars=""
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/doimatkhau_passmoi"
        android:textColor="#000" />

    <EditText
        android:id="@+id/edtPassmoi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/edittext_default_bg"
        android:inputType="textPassword"
        android:padding="10dp"
        android:scrollbars=""
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnDoimk"
        style="@style/DefaultButtonText"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_default_bg"
        android:text="@string/title_activity_doi_matkhau" />

</LinearLayout>